# wsjcpp-jsonrpc20

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  run_ci.sh  wsjcpp.yml
example-of-exported/py3/: API.md  README.md  setup.py
example-of-exported/py3/libwsjcppjson20client/: SomeClient.py  __init__.py
example-of-exported/webjs/: API.md  package.json  sample.html
scripts.wsjcpp/: generate.WsjcppJsonRpc20Handler  generate.WsjcppJsonRpc20Handler.wsjcpp-script
src/: main.cpp  wsjcpp_jsonrpc20.cpp  wsjcpp_jsonrpc20.h  wsjcpp_jsonrpc20_export_cli_base.cpp  wsjcpp_jsonrpc20_export_cli_base.h  wsjcpp_jsonrpc20_export_cli_python.cpp  wsjcpp_jsonrpc20_export_cli_python.h  wsjcpp_jsonrpc20_export_cli_webjs.cpp  wsjcpp_jsonrpc20_export_cli_webjs.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/nlohmann_json/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_core/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_validators/: wsjcpp.hold.yml
src/app/: main.cpp  wsjcpp_json_rpc20_handler_auth.cpp  wsjcpp_json_rpc20_handler_auth.h  wsjcpp_json_rpc20_handler_game_create.cpp  wsjcpp_json_rpc20_handler_game_create.h  wsjcpp_json_rpc20_notification_chat.cpp  wsjcpp_json_rpc20_notification_chat.h
src/examples/: wsjcpp_json_rpc20_handler_auth.cpp  wsjcpp_json_rpc20_handler_game_create.cpp
tests-client-py3/: run_server.py  run_tests.py
tests-client-py3/some_websocket_server/: SomeWebsocketServer.py  __init__.py
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_json_rpc20_param_def.cpp  unit_test_json_rpc20_param_def.h  unit_test_json_rpc20_user_session.cpp  unit_test_json_rpc20_user_session.h  unit_test_parsing_request_params.cpp  unit_test_parsing_request_params.h  unit_test_request_parse_income_data.cpp  unit_test_request_parse_income_data.h  unit_test_request_server_api.cpp  unit_test_request_server_api.h
